# spydlog

./: .clangd  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  release.yml
benchmark/: benchmark.py
cmake/: target_options.cmake
src/: __init__.py  _version.py  spydlog.cpp
stubs/: spydlog.pyi
tests/: conftest.py  test_async.py  test_basic.py  test_factories.py  test_integration.py  test_loggers.py  test_sinks.py
