[build-system]
requires = [
    "scikit-build-core>=0.9.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "spydlog"
version = "0.1.0"
description = "Python bindings for spdlog using nanobind"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
ninja.minimum-version = "1.10"
wheel.packages = ["spydlog"]
# cmake.build-type = "Debug"
