[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "setuptools-scm[toml]>=6.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "spydlog"
dynamic = ["version"]
description = "Python bindings for spdlog"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Romain Augier", email = "contact@romainaugier.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
ninja.minimum-version = "1.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "1.0.0.dev0"

[tool.cibuildwheel]
build-verbosity = 1
